--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,3 +17,29 @@
     outline: none; /* Убирает стандартный outline */
     box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); /* Эффект фокуса */
 }
+
+.jewish-loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
+}
+
+.jewish-loader {
+    width: 55px;
+    height: 55px;
+    background-image: url('./assets/jew.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
