--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,21 +1,54 @@
+.custom-outline-dark .page-link {
+    border: 1px solid rgb(221, 221, 221) !important;
+    background-color: rgb(252, 252, 252) !important;
+    color: rgb(55, 55, 55) !important;
+    margin-right: 0.7rem;
+}
+
+.custom-outline-dark .page-link:hover,
+.custom-outline-dark .page-link:focus,
+.custom-outline-dark .page-item.active .page-link,
+.custom-outline-dark .active .page-link {
+    background-color: #41474e !important;
+    color: white !important;
+    z-index: 3 !important;
+}
+
 .custom-button {
     display: flex;
     align-items: center;
-    gap: 8px; /* Расстояние между текстом и иконкой */
-    padding: 0.375rem 0.75rem; /* Стандартный padding */
-    border-width: 2px; /* Толщина обводки */
-    border-radius: 0.25rem; /* Скруглённые углы */
-    transition: all 0.3s ease; /* Плавный переход */
+    gap: 8px;
+    padding: 0.375rem 0.75rem;
+    border-width: 2px;
+    border-radius: 0.25rem;
+    transition: all 0.3s ease;
+    color: rgb(55, 55, 55);
 }
 
+@media (max-width: 1200px) and (min-width: 992px) {
+    .custom-button-container {
+        flex-direction: column !important;
+    }
+
+    .custom-button {
+        margin-right: 0 !important;
+        margin-bottom: 0.5rem !important;
+    }
+
+    .custom-button:last-child {
+        margin-bottom: 0 !important;
+    }
+}
+
+
 .custom-button:hover {
-    background-color: white; /* Белый фон при наведении */
-    color: black; /* Чёрный текст и иконка */
+    background-color: white;
+    color: black;
 }
 
 .custom-button:focus {
-    outline: none; /* Убирает стандартный outline */
-    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5); /* Эффект фокуса */
+    outline: none;
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.5);
 }
 
 .jewish-loader-container {
